<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Inside text input layout add
              an auto complete text view
                and make its input type to none-->
        <AutoCompleteTextView
            android:id="@+id/dropdown"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="none"
            android:text="@string/select_distance"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/pitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pitch"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/azimuth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yaw"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/azimuth_offset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yaw_offset"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/magnetic_x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/magnetic_x"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/magnetic_y"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/magnetic_y"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/magnetic_z"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/magnetic_z"
        android:textSize="20sp" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="@string/timer"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/reset_db_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_db" />

            <Button
                android:id="@+id/reset_reading_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_reading" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/button_stop"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop_reading" />

            <Button
                android:id="@+id/button_start"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_reading" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
